Call operation performance optimizations  (#5537)
* Call Operation performance improvements

- Move values that are the same or shared across the transaction to
  TxValues record
- Move warm and cold storage to undoable sets and tables.
- Move transient storage to undoable table.
- Move address hashing inside of address with a memoized field.
- lazy create EOF return stack

Signed-off-by: Danno Ferrin <danno.ferrin@swirldslabs.com>